@@ -1,0 +1,85 @@
+This bullet list should be divided exactly in mid-page:
+
+* Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+         
+This item list should be divided at 1/4th page width:
+         
+1. Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+         
+.. raw:: pdf
+
+         PageBreak twoColumn
+         
+This bullet list should be divided exactly in mid-column (1/4th page width):
+
+* Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+  Long Long Long
+
+This item list should be divided at 1/8th page width:
+         
+1. Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
+   Long Long Long
